记录-问医生的状态改变

--- a/weitaixin/src/main/res/values/strings.xml
+++ b/weitaixin/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
 
     <!--cn.ihealthbaby.weitaixin.ui.mine.UseProcessActiviy-->
     <string name="use_process_title">使用流程</string>
+    <string name="title_activity_pay_account">PayAccountActivity</string>
 
 </resources>
