问医生的bug修复

--- a/weitaixin/src/main/res/values/strings.xml
+++ b/weitaixin/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <!--cn.ihealthbaby.weitaixin.ui.mine.UseProcessActiviy-->
     <string name="use_process_title">使用流程</string>
     <string name="title_activity_pay_account">PayAccountActivity</string>
+    <string name="title_activity_record_play">RecordPlayActivity</string>
 
 </resources>
