--- a/weitaixinpro/src/main/res/values/strings.xml
+++ b/weitaixinpro/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="device_id">本机decice ID：</string>
 </resources>
