weitaixinpro  修改监测列表 提示条目 改为绿色

--- a/weitaixinpro/src/main/res/values/strings.xml
+++ b/weitaixinpro/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="device_id">本机decice ID：</string>
     <string name="already_monitor">已检测</string>
     <string name="no_monitor">未检测</string>
+    <string name="no_more_data">没有更多数据了</string>
 </resources>
