--- a/weitaixinpro/src/main/res/values/strings.xml
+++ b/weitaixinpro/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">微胎心院内版</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="device_id">本机decice ID：</string>
@@ -13,4 +13,5 @@
     <string name="hospital">医院</string>
     <string name="department">科室</string>
     <string name="version">版本</string>
+    <string name="monitor_record">监测记录</string>
 </resources>
