--- a/weitaixin/src/main/res/values/strings.xml
+++ b/weitaixin/src/main/res/values/strings.xml
@@ -56,4 +56,13 @@
     <string name="title_activity_record_play">RecordPlayActivity</string>
     <string name="title_activity_curve_play">CurvePlayActivity</string>
 
+    <!---->
+    <string name="pickerview_cancel">取消</string>
+    <string name="pickerview_submit">确定</string>
+    <string name="pickerview_year">年</string>
+    <string name="pickerview_month">月</string>
+    <string name="pickerview_day">日</string>
+    <string name="pickerview_hours">时</string>
+    <string name="pickerview_minutes">分</string>
+    <string name="pickerview_seconds">秒</string>
 </resources>
